--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BookNest – Discover & Collect Your Favourite Books</title>
+    <title>BookNest – Discover and Collect Your Favourite Books</title>
     <meta
       name="description"
       content="BookNest is your cozy corner to discover, collect, and manage your favourite books online."
